Add Intersection to UI